fix video embeds expanding pages on mobile

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -183,6 +183,11 @@ article {
   }
 
   margin-bottom: @separation-size;
+
+  // Constrain embeds so the page doesn't expand
+  iframe {
+    max-width: 100% !important;
+  }
 }
 
 header {
